[package]
name = "fastsocket"
version = "0.1.0"
edition = "2021"

[dependencies]
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0" ,features = ["full"]}
serde = { version = "1.0.217", features = ["derive"] }
rand = "0.8.5"
fastrand = "2.3.0"
async-trait = "0.1.86"
aes-gcm = "0.10.3"
